<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="#ffdfeaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView">

        <Button
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/spotifyStreamer"
            android:textAllCaps="true"
            android:id="@+id/btnSpotifyStreamer"
            android:background="#F08C35"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/footballScoresApp"
            android:textAllCaps="true"
            android:id="@+id/btnScoresApp"
            android:background="#F08C35"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/libraryApp"
            android:textAllCaps="true"
            android:id="@+id/btnLibraryApp"
            android:background="#F08C35"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/buildItBigger"
            android:textAllCaps="true"
            android:id="@+id/btnBuildItBigger"
            android:background="#F08C35"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:textAllCaps="true"
            android:id="@+id/btnCapstone"
            android:background="#F08C35"
            android:onClick="sendMessage"/>
    </LinearLayout>

</RelativeLayout>
